...
    <string name="reset_password_field">Username or Email</string>
    <string name="reset_password_description">Please enter your username or email below and you will be sent an email with a link to reset your password.</string>

    <string name="remember_username_description">Please enter your email below and you will be sent an email with a reminder of your username.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="open">Open</string>
...
    <string name="error_register_password_no_match">Your passwords don\'t match</string>
    <string name="error_register_no_firstname">Please enter your first name</string>
    <string name="error_register_no_lastname">Please enter your last name</string>
    <string name="error_register_no_phoneno">Please enter your phone number</string>
    <string name="error_register_no_username">Please enter a username</string>
    <string name="error_register_username_spaces">Your username cannot contain spaces</string>
    <string name="error_register_email">Email not valid</string>
    <string name="error_resource_app_not_found">You don\'t seem to have an app installed to open \'%1$s\'. Please install an app capable of opening this type of file.</string>
    <string name="external_resource_app_missing">You don\'t seem to have an app installed that can open \'%1$s\'</string>
    <string name="external_resource_install_app">Install app</string>


    <string name="error_resource_not_found">File: \'%1$s\' not found.</string>
...
